fixing dark mode colors

--- a/frontend/src/components/katip/NoteSheet.scss
+++ b/frontend/src/components/katip/NoteSheet.scss
@@ -2,9 +2,3 @@
   margin: 12px 24px;
   width: calc(100% - 48px);
 }
-
-.dark {
-  #svg-tmm-score {
-    filter: invert(100%);
-  }
-}
