--- a/frontend/src/sass/abstracts/_placeholders.scss
+++ b/frontend/src/sass/abstracts/_placeholders.scss
@@ -11,7 +11,7 @@
 }
 
 %widget-shadow-dark {
-  box-shadow: 0 0 14px -12px variables.$dark-shadow-color-dark;
+  box-shadow: 0 0 14px -10px variables.$dark-shadow-color-dark;
 }
 
 %links {
