--- a/frontend/src/sass/abstracts/_variables.scss
+++ b/frontend/src/sass/abstracts/_variables.scss
@@ -1,26 +1,28 @@
 $font-color: rgba(34, 34, 34, 1);
-$font-color-dark: rgba(221, 221, 221, 1);
+// $font-color-dark: rgb(135, 222, 255);
+$font-color-dark: rgb(203, 202, 202);
 
 $font-color-faded: rgba(34, 34, 34, 0.6);
-$font-color-faded-dark: rgba(221, 221, 221, 0.6);
+// $font-color-faded-dark: rgb(56, 158, 219);
+$font-color-faded-dark: rgba(203, 202, 202, 0.6);
 
 $far-bg-color: rgb(243, 241, 224);
-$far-bg-color-dark: rgb(12, 14, 31);
+$far-bg-color-dark: rgb(30, 30, 30);
 
 $paper-bg-color: rgb(247, 245, 234);
-$paper-bg-color-dark: rgb(8, 10, 21);
+$paper-bg-color-dark: rgb(37, 37, 38);
 
 $active-fore-color: rgb(249, 248, 239);
-$active-fore-color-dark: rgb(6, 7, 16);
+$active-fore-color-dark: rgb(37, 37, 38);
 
 $lightest-color: rgb(252, 251, 242);
-$lightest-color-dark: rgb(3, 4, 13);
+$lightest-color-dark: rgb(34, 34, 35);
 
 $pure-white: rgb(255, 255, 255);
-$pure-white-dark: rgb(0, 0, 0);
+$pure-white-dark: rgb(30, 30, 31);
 
 $dark-shadow-color: rgb(20, 20, 20);
-$dark-shadow-color-dark: rgb(235, 235, 235);
+$dark-shadow-color-dark: rgb(20, 20, 20);
 
 $paper-width: 210mm;
 $nav-icon-height: 36px;
